# vcpkg-webrtc-sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: apprtc_call.cc  apprtc_call.h  apprtc_common.cc  apprtc_common.h  apprtc_peer_connection.cc  apprtc_peer_connection.h  apprtc_signaling_client.cc  apprtc_signaling_client.h  file_video_source.cc  file_video_source.h  main.cc  sine_wave_capturer.cc  sine_wave_capturer.h
tests/: run_e2e.py
